network/istio/manifest/crawlab.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: crawlab-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http-crawlab
      protocol: HTTP
    hosts:
    - "crawlab.cwang.one"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-crawlab
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingress-certs
      minProtocolVersion: TLSV1_3
    hosts:
    - "crawlab.cwang.one"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crawlab-vs
  namespace: istio-system
spec:
  hosts:
  - "crawlab.cwang.one"
  gateways:
  - crawlab-gateway
  http:
  - route:
    - destination:
        host: crawlab.crawlab.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: crawlab
  namespace: istio-system
spec:
  host: crawlab.crawlab.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
