network/istio/manifest/kiali.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http-kiali
      protocol: HTTP
    hosts:
    - "kiali.cwang.one"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-kiali
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingress-certs
      minProtocolVersion: TLSV1_3
    hosts:
    - "kiali.cwang.one"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - "kiali.cwang.one"
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        # host: kiali.istio-system.svc.cluster.local
        host: kiali.monitoring.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  # host: kiali.istio-system.svc.cluster.local
  host: kiali.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
